# learning--hypermedia-systems--contact-app--rust

./: Cargo.toml  README.md
src/: contact_model.rs  contact_repo.rs  contacts_archiver.rs  laying_out.rs  main.rs  static_assets.rs
static/: .gitignore
