[package]
name = "contact"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.6.0"
atomic_enum = "0.2.0"
axum = { version = "0.7.2", features = ["macros"] }
axum-extra = { version = "0.9.0", features = ["form"] }
axum-flash = "0.8.0"
axum-htmx = "0.5.0"
fakeit = "1.2.0"
html-escape = "0.2.13"
markup = "0.15.0"
mime_guess = "2.0.4"
rand = "0.8.5"
rust-embed = "8.1.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.35.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["catch-panic"] }
typed-builder = "0.18.0"
validator = { version = "0.16", features = ["phone"] }
